# TerraLattice

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  TERRALATTICE_FINAL_AUDIT.md  TERRALATTICE_V1_RELEASE_REPORT.md  api.py  benchmark_engine.py  calibration_engine.py  counterfactual_engine.py  data_sources.py  data_validation.py  dataset_builder.py  docker-compose.yml  explainability.py  graph.py  historical_replay_engine.py  intervention_library.py  module.py  parameter_loader.py  parameter_registry.py  parameter_validation.py  pareto_analysis.py  policy_cost_model.py  policy_optimizer.py  policy_profiles.py  pyproject.toml  quality_scoring.py  replay_metrics.py  requirements.txt  resampling.py  scenario_results.json  sensitivity_analysis.py  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
adapters/: base.py  faostat_adapter.py  nasa_adapter.py  noaa_adapter.py  owid_adapter.py  undata_adapter.py  worldbank_adapter.py
docs/api/: api.md
frontend/: package-lock.json  package.json
integration_tests/: test_end_to_end.py  test_robustness.py  test_scalability.py
parameters/: agriculture_edges.yaml  agriculture_nodes.yaml  climate_edges.yaml  climate_nodes.yaml  economy_edges.yaml  economy_nodes.yaml  food_edges.yaml  food_nodes.yaml  health_nodes.yaml  policy_nodes.yaml  society_edges.yaml  society_nodes.yaml  water_edges.yaml  water_nodes.yaml
schemas/: timeseries.py
(+68 files in other folders)
