[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terralattice"
version = "1.0.0"
authors = [
  { name="Ronit Mongia", email="ronit@example.com" },
]
description = "A Climate-Economy-Society Digital Twin for Cascading Risk Simulation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "networkx",
    "numpy",
    "pandas",
    "pyyaml",
]
